made defaultvalue for previous_concert, added flex-wrap to navbar to solve #41

--- a/webapp/static/css/main.css
+++ b/webapp/static/css/main.css
@@ -9,39 +9,38 @@ li{
   margin-left:2%;
 }
 
-li > a{
+li > a {
   color: #FFFFFF;
   text-decoration: none;
   font-weight: bold;
   font-size: 1.2em;
 }
 
-#content{
-  padding:1%;
+#content {
+  padding: 1%;
   background-color: rgba(244,212,66,0.1);
-  height:97%;
+  height: 97%;
   text-align: center;
 }
 
 .teknikerdiv {
-  display:none;
+  display: none;
 }
 
 .utstyrdiv {
   display: block;
 }
 
-.sjangerkonserter{
-  display:none;
+.sjangerkonserter {
+  display: none;
 }
 
-
-#navbar{
+#navbar {
   margin:0;
   background-color: #FF0000;
   padding:1.5%;
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-wrap: wrap;
 }
-
